--- a/index.css
+++ b/index.css
@@ -8,6 +8,9 @@
   height: 100%;
   padding-left: 48px;
   padding-right: 48px;
+  max-width: 1500px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .titles {
@@ -83,7 +86,66 @@
   box-sizing: border-box;
 }
 
-@media (max-width: 768px) {
+.text figure {
+  display: inline-block;
+  text-align: center;
+  margin-right: 24px;
+  margin-bottom: 16px;
+}
+
+.text figure img {
+  height: 35px;
+  width: 50px;
+  margin-bottom: 6px;
+  filter: invert(1);
+  opacity: 0.85;
+}
+
+.text figure figcaption {
+  font-size: 12px;
+  color: #c4c8ce;
+}
+
+.contact .text {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+}
+
+.text img {
+  height: 35px;
+  width: 50px;
+  filter: invert(1);
+  opacity: 0.85;
+  transition: opacity 0.2s ease;
+  gap: 24px;
+}
+.text {
+  padding-left: 0;
+}
+
+.text li {
+  list-style: none;
+  position: relative;
+  padding-left: 22px;
+  line-height: 1.7;
+  color: #c4c8ce;
+}
+
+.text li::before {
+  content: "▹";
+  position: absolute;
+  left: 0;
+  top: 4px;
+  color: #22d3ee;
+  font-size: 14px;
+}
+
+.text img:hover {
+  opacity: 0.2;
+}
+
+@media (max-width: 800px) {
   .description {
     display: flex;
     flex-direction: column-reverse;
@@ -95,5 +157,22 @@
   }
   .gallery-images {
     grid-template-columns: 1fr;
+  }
+}
+
+@media (max-width: 576px) {
+  .body,
+  .html {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+
+  .text {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  ul.text {
+    padding-left: 20px;
   }
 }
